@@ -64,7 +64,7 @@ libboard$(LIBEXT): $(OBJS)
 
 .depend: Makefile $(SRCS)
 	@$(MKDEP) $(CC) -- $(CFLAGS) -- $(SRCS) >Make.dep
-	touch $@
+	@touch $@
 
 depend: .depend
 
